tests/neg/i7818.scala
def foo = (x: @) => ()  // error // error